upd swg
