# swagger/gen/simulator/models.go
@@ -7,10 +7,6 @@ import (
 	openapi_types "github.com/oapi-codegen/runtime/types"
 )
 
-const (
-	BearerAuthScopes bearerAuthContextKey = "BearerAuth.Scopes"
-)
-
 // ServerUrlInternalDockerAPIGatewayServer defines the Server URL for Internal Docker API Gateway Server
 const ServerUrlInternalDockerAPIGatewayServer = "http://cyber-navigate_gateway-server/api/v1"
 
@@ -352,9 +348,6 @@ type UnauthorizedResponse = ErrorResponse
 
 // UnprocessableEntityResponse defines model for UnprocessableEntityResponse.
 type UnprocessableEntityResponse = ErrorResponse
-
-// bearerAuthContextKey is the context key for BearerAuth security scheme
-type bearerAuthContextKey string
 
 // SendUserAnswerJSONBody defines parameters for SendUserAnswer.
 type SendUserAnswerJSONBody struct {
